--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ for (var i = 0; i < albums.length; i++) {
     var chilsungSpritePrice = $("#chilsungSprite .menuPrice")[0];
     switch (language) {
       case 'korean':
-        slogan.innerText = "우리의 설레임이 구워지는 소리";
+        slogan.innerText = "우리의 설렘이 구워지는 소리";
         businessHours.innerText = "영업시간 : 오전 11시 ~ 오후 9시\r\n(라스트 오더 : 오후 8시 30분)";
         holiday.innerText = "휴무일 : 매주 화요일";
 
