--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div align="center" style="padding-top: 10%;padding-bottom: 10%;padding-left: 5%;padding-right: 5%;background-color: #bed3f1;color:white;font-weight: bold;font-family:sans-serif;margin-top: 0px;">
         <img src="./img/main/chizizic.png" style="width: 100%;">
         <!--<span style="font-size: 3em; display: none;">치지직</span>-->
-        <span id="slogan" style="padding-top: 4%;font-family: 'SF_HailSnow';font-size: 0.55em;">우리의 설레임이 구워지는 소리</span></div></div>
+        <span id="slogan" style="padding-top: 4%;font-family: 'SF_HailSnow';font-size: 0.55em;">우리의 설렘이 구워지는 소리</span></div></div>
     <div class="contents">
       <div align="center" id="storeDescription" style="font-family: 'Vitro_pride';">
           <span class="businessHours">영업시간 : 오전 11시 ~ 오후 9시<br>(라스트 오더 : 오후 8시 30분)</span>
